# noted

./: .gitattributes  .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  api.py  dred.sqlite3.sql  go.mod  go.sum  noted.go  noted.py  noted.spec  notes.go  notes_test.go  package-lock.json  package.json  pyproject.toml  requirements.txt  watcher.py  webpack.config.js
data/: default_config.json
model/: model.go  model_test.go  test.db
noted/: __main__.py  app.py  configure.py  database.py  db.py  notes.py  results.py  searches.py  server.py  settings.py  utils.py  watcher.py
noted/static/js/: display.js
noted/static/js/noted/: display.js
noted/templates/: about.html  base.html  config.html  display.html  editor.html  home.html
react-flask-app/: .pnp.cjs  package-lock.json  package.json
react-flask-app/api/: .flaskenv  api.py  pyproject.toml
src/: App.js  index.js
src/components/: MenuButtons.jsx  MyEditor.jsx
static/js/: editor.main.nls.js
templates/: about.gohtml  base.gohtml  base.html  editor.gohtml  editor.html  home.gohtml  home.html  index.gohtml  noconfig.html  terminate.gohtml  terminate.html
tests/: test_db.py  test_watcher.py
